[metadata]
name = debug-cdn
version = 0.0.1
author = mkh
author_email = m.khomutov@list.ru
description = Restreams rtp container in flv container. Prints rtp timeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-khomutov/debug-cdn
project_urls =
    Bug Tracker = https://github.com/m-khomutov/debug-cdn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    debug-rtsp = service.service:run
